Code generalization for MQLoss and DistributionLoss

--- a/vitor_gist.ipynb
+++ b/vitor_gist.ipynb
@@ -604,6 +604,58 @@
    "source": [
     "cv_nf"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ds              1993-09-30 00:00:00\n",
+       "cutoff          1993-08-31 00:00:00\n",
+       "NHITS                   3787.715088\n",
+       "NHITS-median            3865.569336\n",
+       "NHITS-lo-90            -1984.011475\n",
+       "NHITS-lo-80             -678.531738\n",
+       "NHITS-hi-80             8122.185059\n",
+       "NHITS-hi-90              9215.05957\n",
+       "NHITS-loc               3882.369141\n",
+       "NHITS-scale             3445.741943\n",
+       "y                            4800.0\n",
+       "Name: M1, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row = cv_nf.iloc[0, :]\n",
+    "row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any([\"loc\" in col for col in row.index])"
+   ]
   }
  ],
  "metadata": {
