Support more GluonTS datasets

--- a/results.ipynb
+++ b/results.ipynb
@@ -217,6 +217,39 @@
     "auc_logloss_df = pd.read_csv(auc_logloss_results)\n",
     "auc_logloss_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ax\n",
+      "ax\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    NAME_DEFAULT = \"a\"\n",
+    "    NAME = NAME_DEFAULT\n",
+    "\n",
+    "    @classmethod\n",
+    "    def load(cls, x):\n",
+    "        x += 1\n",
+    "        A.NAME = A.NAME_DEFAULT\n",
+    "        A.NAME += \"x\"\n",
+    "    \n",
+    "\n",
+    "aaa = A.load(3)\n",
+    "print(A.NAME)\n",
+    "aaaaa = A.load(5)\n",
+    "print(A.NAME)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
