--- a/results.ipynb
+++ b/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -13,7 +13,7 @@
        "        0.06361728]))"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "       [       nan, 0.90909188,        nan]])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "       [       nan, 0.39126534,        nan]])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -456,6 +456,285 @@
     "\n",
     "table = ax.table(cellText=logloss_df.round(4).values, colLabels=logloss_df.columns, rowLabels=logloss_df.index, cellLoc='center', loc='center')\n",
     "plt.savefig(\"plots/logloss_global_mean.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>M3Dataset_Quarterly_MQLoss</th>\n",
+       "      <th>M3Dataset_Quarterly_DistributionLoss</th>\n",
+       "      <th>M3Dataset_Monthly_MQLoss</th>\n",
+       "      <th>M3Dataset_Monthly_DistributionLoss</th>\n",
+       "      <th>Tourism_Quarterly_MQLoss</th>\n",
+       "      <th>Tourism_Quarterly_DistributionLoss</th>\n",
+       "      <th>Tourism_Monthly_MQLoss</th>\n",
+       "      <th>Tourism_Monthly_DistributionLoss</th>\n",
+       "      <th>GLUONTS_car_parts_without_missing_MQLoss</th>\n",
+       "      <th>GLUONTS_car_parts_without_missing_DistributionLoss</th>\n",
+       "      <th>GLUONTS_electricity_weekly_MQLoss</th>\n",
+       "      <th>GLUONTS_electricity_weekly_DistributionLoss</th>\n",
+       "      <th>GLUONTS_traffic_nipsD_MQLoss</th>\n",
+       "      <th>GLUONTS_traffic_nipsD_DistributionLoss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SeasonalNaive</th>\n",
+       "      <td>157.055704</td>\n",
+       "      <td>157.055704</td>\n",
+       "      <td>157.850242</td>\n",
+       "      <td>157.850242</td>\n",
+       "      <td>67050.888587</td>\n",
+       "      <td>6.705089e+04</td>\n",
+       "      <td>14173.462289</td>\n",
+       "      <td>14173.462289</td>\n",
+       "      <td>0.257351</td>\n",
+       "      <td>0.257351</td>\n",
+       "      <td>346347.047059</td>\n",
+       "      <td>346347.047059</td>\n",
+       "      <td>0.011703</td>\n",
+       "      <td>0.011703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MLP</th>\n",
+       "      <td>214.428331</td>\n",
+       "      <td>253.636555</td>\n",
+       "      <td>113.915239</td>\n",
+       "      <td>115.991920</td>\n",
+       "      <td>65302.614975</td>\n",
+       "      <td>6.547377e+04</td>\n",
+       "      <td>13789.580829</td>\n",
+       "      <td>13536.803670</td>\n",
+       "      <td>0.200203</td>\n",
+       "      <td>0.213975</td>\n",
+       "      <td>339677.174907</td>\n",
+       "      <td>340659.347644</td>\n",
+       "      <td>0.001311</td>\n",
+       "      <td>0.001452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NHITS</th>\n",
+       "      <td>160.759070</td>\n",
+       "      <td>140.768262</td>\n",
+       "      <td>114.037394</td>\n",
+       "      <td>114.976814</td>\n",
+       "      <td>66491.532581</td>\n",
+       "      <td>6.492897e+06</td>\n",
+       "      <td>14130.837296</td>\n",
+       "      <td>14078.037050</td>\n",
+       "      <td>0.196204</td>\n",
+       "      <td>0.203690</td>\n",
+       "      <td>353115.698421</td>\n",
+       "      <td>355819.298973</td>\n",
+       "      <td>0.001258</td>\n",
+       "      <td>0.001529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LSTM</th>\n",
+       "      <td>147.678358</td>\n",
+       "      <td>138.294114</td>\n",
+       "      <td>118.254240</td>\n",
+       "      <td>117.904698</td>\n",
+       "      <td>65256.116853</td>\n",
+       "      <td>6.445602e+04</td>\n",
+       "      <td>13368.950968</td>\n",
+       "      <td>13838.855881</td>\n",
+       "      <td>0.170387</td>\n",
+       "      <td>1356.813793</td>\n",
+       "      <td>337516.367952</td>\n",
+       "      <td>349157.481876</td>\n",
+       "      <td>0.001313</td>\n",
+       "      <td>0.001554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GRU</th>\n",
+       "      <td>137.018936</td>\n",
+       "      <td>167.822971</td>\n",
+       "      <td>113.808149</td>\n",
+       "      <td>117.311167</td>\n",
+       "      <td>63140.386833</td>\n",
+       "      <td>6.201225e+04</td>\n",
+       "      <td>13811.925263</td>\n",
+       "      <td>14194.237435</td>\n",
+       "      <td>0.168264</td>\n",
+       "      <td>0.219232</td>\n",
+       "      <td>341995.275833</td>\n",
+       "      <td>338420.326725</td>\n",
+       "      <td>0.001230</td>\n",
+       "      <td>0.001437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DeepAR</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>151.632430</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>135.867655</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.241772e+04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12574.383565</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.197412</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>328826.950110</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.001582</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               M3Dataset_Quarterly_MQLoss  \\\n",
+       "SeasonalNaive                  157.055704   \n",
+       "MLP                            214.428331   \n",
+       "NHITS                          160.759070   \n",
+       "LSTM                           147.678358   \n",
+       "GRU                            137.018936   \n",
+       "DeepAR                                NaN   \n",
+       "\n",
+       "               M3Dataset_Quarterly_DistributionLoss  M3Dataset_Monthly_MQLoss  \\\n",
+       "SeasonalNaive                            157.055704                157.850242   \n",
+       "MLP                                      253.636555                113.915239   \n",
+       "NHITS                                    140.768262                114.037394   \n",
+       "LSTM                                     138.294114                118.254240   \n",
+       "GRU                                      167.822971                113.808149   \n",
+       "DeepAR                                   151.632430                       NaN   \n",
+       "\n",
+       "               M3Dataset_Monthly_DistributionLoss  Tourism_Quarterly_MQLoss  \\\n",
+       "SeasonalNaive                          157.850242              67050.888587   \n",
+       "MLP                                    115.991920              65302.614975   \n",
+       "NHITS                                  114.976814              66491.532581   \n",
+       "LSTM                                   117.904698              65256.116853   \n",
+       "GRU                                    117.311167              63140.386833   \n",
+       "DeepAR                                 135.867655                       NaN   \n",
+       "\n",
+       "               Tourism_Quarterly_DistributionLoss  Tourism_Monthly_MQLoss  \\\n",
+       "SeasonalNaive                        6.705089e+04            14173.462289   \n",
+       "MLP                                  6.547377e+04            13789.580829   \n",
+       "NHITS                                6.492897e+06            14130.837296   \n",
+       "LSTM                                 6.445602e+04            13368.950968   \n",
+       "GRU                                  6.201225e+04            13811.925263   \n",
+       "DeepAR                               6.241772e+04                     NaN   \n",
+       "\n",
+       "               Tourism_Monthly_DistributionLoss  \\\n",
+       "SeasonalNaive                      14173.462289   \n",
+       "MLP                                13536.803670   \n",
+       "NHITS                              14078.037050   \n",
+       "LSTM                               13838.855881   \n",
+       "GRU                                14194.237435   \n",
+       "DeepAR                             12574.383565   \n",
+       "\n",
+       "               GLUONTS_car_parts_without_missing_MQLoss  \\\n",
+       "SeasonalNaive                                  0.257351   \n",
+       "MLP                                            0.200203   \n",
+       "NHITS                                          0.196204   \n",
+       "LSTM                                           0.170387   \n",
+       "GRU                                            0.168264   \n",
+       "DeepAR                                              NaN   \n",
+       "\n",
+       "               GLUONTS_car_parts_without_missing_DistributionLoss  \\\n",
+       "SeasonalNaive                                           0.257351    \n",
+       "MLP                                                     0.213975    \n",
+       "NHITS                                                   0.203690    \n",
+       "LSTM                                                 1356.813793    \n",
+       "GRU                                                     0.219232    \n",
+       "DeepAR                                                  0.197412    \n",
+       "\n",
+       "               GLUONTS_electricity_weekly_MQLoss  \\\n",
+       "SeasonalNaive                      346347.047059   \n",
+       "MLP                                339677.174907   \n",
+       "NHITS                              353115.698421   \n",
+       "LSTM                               337516.367952   \n",
+       "GRU                                341995.275833   \n",
+       "DeepAR                                       NaN   \n",
+       "\n",
+       "               GLUONTS_electricity_weekly_DistributionLoss  \\\n",
+       "SeasonalNaive                                346347.047059   \n",
+       "MLP                                          340659.347644   \n",
+       "NHITS                                        355819.298973   \n",
+       "LSTM                                         349157.481876   \n",
+       "GRU                                          338420.326725   \n",
+       "DeepAR                                       328826.950110   \n",
+       "\n",
+       "               GLUONTS_traffic_nipsD_MQLoss  \\\n",
+       "SeasonalNaive                      0.011703   \n",
+       "MLP                                0.001311   \n",
+       "NHITS                              0.001258   \n",
+       "LSTM                               0.001313   \n",
+       "GRU                                0.001230   \n",
+       "DeepAR                                  NaN   \n",
+       "\n",
+       "               GLUONTS_traffic_nipsD_DistributionLoss  \n",
+       "SeasonalNaive                                0.011703  \n",
+       "MLP                                          0.001452  \n",
+       "NHITS                                        0.001529  \n",
+       "LSTM                                         0.001554  \n",
+       "GRU                                          0.001437  \n",
+       "DeepAR                                       0.001582  "
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from neuralforecast.losses.numpy import mqloss\n",
+    "\n",
+    "mqloss_metric_df = {}\n",
+    "\n",
+    "for dataset in [M3Dataset, TourismDataset, GluontsDataset]:\n",
+    "    for group in dataset.frequency_map.keys():\n",
+    "\n",
+    "        if group == 'traffic_nips':\n",
+    "            group += GluontsDataset.frequency_pd['traffic_nips']\n",
+    "        \n",
+    "        for loss_name in ['MQLoss', 'DistributionLoss']:\n",
+    "            experiment_id = f'{dataset._DATASET_NAME}_{group}_{loss_name}'\n",
+    "        \n",
+    "            forecast_df = pd.read_csv(f\"./results/{experiment_id}/forecast_df_{experiment_id}.csv\")\n",
+    "            models_names = ['SeasonalNaive', 'MLP', 'NHITS', 'LSTM', 'GRU']\n",
+    "            if loss_name == 'DistributionLoss':\n",
+    "                models_names.append('DeepAR')\n",
+    "\n",
+    "            mqloss_metric_df[f'{experiment_id}'] = {}\n",
+    "            for model in models_names:\n",
+    "\n",
+    "                df = forecast_df[filter(lambda col: model in col, forecast_df.columns)].drop(columns=[f'Auto{model}', f'Auto{model}-loc', f'Auto{model}-scale'], errors='ignore')\n",
+    "                mql = []\n",
+    "                for i in range(len(df)):\n",
+    "                    y =  np.array([forecast_df['y_true'][i]])\n",
+    "                    y_hat = df.iloc[i, :].to_numpy()\n",
+    "                    quantiles = np.array([0.5, 0.01, 0.05, 0.1, 0.9, 0.95, 0.99])\n",
+    "                    #print(y_hat)\n",
+    "                    mql.append(mqloss(y, y_hat, quantiles))\n",
+    "                mqloss_metric_df[f'{experiment_id}'][model.removeprefix(\"Auto\")] = np.mean(mql)\n",
+    "            \n",
+    "pd.DataFrame(mqloss_metric_df)"
    ]
   }
  ],
